initial setup commit

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 PORT=9999
-NODE_ENV=development
+JWT_SECRET=BLOGAPPLICATION
+NODE_ENV=DEVELOPMENT
+MONGODB_URI_DEVELOPMENT=mongodb+srv://hktejani64:A2A4nGqXPBU6lffI@blogapp-cluster.flztgux.mongodb.net/blogapp
