Cloudinary Setup and Angular Guard CanActivate function

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ PORT=9999
 JWT_SECRET=BLOGAPPLICATION
 NODE_ENV=DEVELOPMENT
 MONGODB_URI_DEVELOPMENT=mongodb+srv://hktejani64:A2A4nGqXPBU6lffI@blogapp-cluster.flztgux.mongodb.net/blogapp
+CLOUDINARY_CLOUD_NAME=duntnswm3
+CLOUDINARY_API_KEY=211767462131855
+CLOUDINARY_API_SECRET=iEMz80bskHstCsxgK2c4F0RPTdQ
